app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webecho
  namespace: cloudacademy
  labels:
    app: webecho
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webecho
      version: v1
  template:
    metadata:
      labels:
        app: webecho
        version: v1
    spec:
      containers:
      - name: webecho
        image: cloudacademydevops/webappecho:v3
        imagePullPolicy: IfNotPresent
        command: ["/go/bin/webapp"]
        ports:
        - containerPort: 8080
