app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webecho
  name: webecho
  namespace: cloudacademy
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webecho
    version: v1
